--- a/PSB/backend/templates/table.html
+++ b/PSB/backend/templates/table.html
@@ -8,80 +8,85 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         .search-container {
-            max-width: 800px;
+            max-width: 700px;
             margin: 30px auto;
         }
-        #results {
-            margin-top: 20px;
+
+        textarea:focus,
+        input[type="text"]:focus,
+        input[type="password"]:focus,
+        input[type="datetime"]:focus,
+        input[type="datetime-local"]:focus,
+        input[type="date"]:focus,
+        input[type="month"]:focus,
+        input[type="time"]:focus,
+        input[type="week"]:focus,
+        input[type="number"]:focus,
+        input[type="email"]:focus,
+        input[type="url"]:focus,
+        input[type="search"]:focus,
+        input[type="tel"]:focus,
+        input[type="color"]:focus,
+        .uneditable-input:focus {
+        border-color: rgba(144, 116, 197, 0.482);
+        /* box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgba(200, 134, 255, 0.6); */
+        outline: 0 none;
         }
     </style>
 </head>
 <body>
     <div class="container mt-5">
         
-        <div class="container search-container flex">            
+        <div class="container d-flex flex-row">            
             <h2 class="mb-4">Кредитный скоринг организаций</h2>
-            <div class="input-group mb-3">
-                <input type="text" class="form-control" id="searchInput" placeholder="ИНН, Имя организации, Причина отказа ...">
-                <button class="btn btn-primary" type="button" id="searchButton">поиск</button>
+            <div class="container search-container">
+
+                <div class="input-group mb-3">
+                    <input type="text" class="form-control" id="searchInput" placeholder="ИНН, Имя организации, Причина отказа ...">
+                    <button class="btn btn-primary" type="button" id="searchButton">поиск</button>
+                </div>
             </div>
-            
-            <div id="results">
-                <table class="table table-striped table-hover">
+        </div>
+
+        <div class="container">
+            <div style="overflow-y: scroll; height:400px;" >
+                <table class="table align-items-center mb-0">
                     <thead>
                         <tr>
-                            <th>ID</th>
-                            <th>First Name</th>
-                            <th>Last Name</th>
-                            <th>Email</th>
-                            <th>Department</th>
-                            <th>Status</th>
+                            <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">ИНН</th>
+                            <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Название</th>
+                            <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Вероятность дефолта</th>
+                            <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Причина отказа</th>
+                            <th class="text-secondary opacity-7"></th>
                         </tr>
                     </thead>
-                    <tbody id="resultsBody">
-                        <!-- Results will be inserted here by JavaScript -->
+                    <tbody id="tableBody">
+                        {% for row in table_data %}
+                        <tr>
+                            <td scope="row" class="align-middle text-center">
+                                <span class="text-secondary text-xs font-weight-bold">{{ row['inn'] }}</span>
+                            </td>
+                            <td scope="row" class="align-middle text-wide">
+                                <span class="text-secondary text-xs font-weight-bold">{{ row['name'] }}</span>
+                            </td>
+                            <td scope="row" class="align-middle text-center">
+                                <span class="text-secondary text-xs font-weight-bold">{{ row['default_score'] }}</span>
+                            </td>
+                            <td scope="row" class="align-middle text-wide">
+                                <span class="text-secondary text-xs font-weight-bold">{{ row['reason'] }}</span>
+                            </td>
+                            <!-- <td>{{ row['name'] }}</td> -->
+                            <!-- <td>{{ row['default_score'] }}</td> -->
+                            <!-- <td>{{ row['reason'] }}</td> -->
+                            
+                        </tr>
+                        {% endfor %}
                     </tbody>
                 </table>
             </div>
         </div>
 
-        <table class="table align-items-center mb-0">
-            <thead>
-                <tr>
-                    <!-- <th scope="col">ИНН</th> -->
-                    <!-- <th scope="col">Название</th> -->
-                    <!-- <th scope="col">Вероятность дефолта</th> -->
-                    <!-- <th scope="col">Причина отказа</th> -->
-                    <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">ИНН</th>
-                    <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Название</th>
-                    <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Вероятность дефолта</th>
-                    <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Причина отказа</th>
-                    <th class="text-secondary opacity-7"></th>
-                </tr>
-            </thead>
-            <tbody id="tableBody">
-                {% for row in table_data %}
-                <tr>
-                    <td scope="row" class="align-middle text-center">
-                        <span class="text-secondary text-xs font-weight-bold">{{ row['inn'] }}</span>
-                    </td>
-                    <td scope="row" class="align-middle text-wide">
-                        <span class="text-secondary text-xs font-weight-bold">{{ row['name'] }}</span>
-                    </td>
-                    <td scope="row" class="align-middle text-center">
-                        <span class="text-secondary text-xs font-weight-bold">{{ row['default_score'] }}</span>
-                    </td>
-                    <td scope="row" class="align-middle text-wide">
-                        <span class="text-secondary text-xs font-weight-bold">{{ row['reason'] }}</span>
-                    </td>
-                    <!-- <td>{{ row['name'] }}</td> -->
-                    <!-- <td>{{ row['default_score'] }}</td> -->
-                    <!-- <td>{{ row['reason'] }}</td> -->
-                    
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
+        <button class="btn" type="button" id="downloadFiltered">выгрузить данные</button>
         
     </div>
 
@@ -90,25 +95,29 @@
 
     <!-- Custom JavaScript -->
     <script>
+
         document.addEventListener('DOMContentLoaded', function() {
+            
+
             const searchInput = document.getElementById('searchInput');
             const searchButton = document.getElementById('searchButton');
             const tableBody = document.getElementById('tableBody');
-            // console.log(tableBody)
-            // Load all data initially
-            // fetchData('');
+            const downloadFilteredButton = document.getElementById('downloadFiltered');
             
-            // Search on button click
             searchButton.addEventListener('click', function() {
                 fetchData(searchInput.value);
             });
             
-            // Search on Enter key
             searchInput.addEventListener('keyup', function(e) {
                 if (e.key === 'Enter') {
                     fetchData(searchInput.value);
                 }
             });
+
+            downloadFilteredButton.addEventListener('click', function() {
+                downloadFile();
+            });
+            
             
             function fetchData(searchTerm) {
                 if(searchTerm == '') return;
@@ -147,6 +156,25 @@
                     
                     tableBody.appendChild(rowElement);
                 });
+            }
+
+            function downloadFile() {
+                fetch('/download', {method: "POST"})
+                .then(response => {
+                    if (!response.ok) throw new Error('Network response was not ok');
+                    return response.blob();
+                })
+                .then(blob => {
+                    const url = window.URL.createObjectURL(blob);
+                    const a = document.createElement('a');
+                    a.href = url;
+                    a.download = 'data.csv';
+                    document.body.appendChild(a);
+                    a.click();
+                    window.URL.revokeObjectURL(url);
+                    document.body.removeChild(a);
+                })
+                .catch(error => console.error('Error:', error));
             }
         });
     </script>
